<resources>
    <string name="app_name">آزمون باز</string>

    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <string name="minute">دقیقه</string>
    <string name="cancel">بی خیال</string>
    <string name="confirm">حذف</string>
    <string name="correctAnswer"> پاسخ صحیح</string>
    <string name="incorrectAnswer"> پاسخ اشتباه </string>
    <string name="unAnswered"> سوال نزده </string>

    <string name="dr_test">آزمون</string>
    <string name="dr_favorite">آزمون‌های منتخب شما</string>
    <string name="dr_favored_question">سوالات منتخب شما</string>
    <string name="dr_history">تاریخچه آزمون‌های شما</string>
    <string name="dr_saved_test">آزمون‌های ذخیره شده</string>
    <string name="dr_about">درباره</string>
    <string name="dr_share">معرفی به دوستان</string>

    <!--CoursesTest Activity-->
    <string name="firstChoice">گزینه ۱</string>
    <string name="secondChoice">گزینه ۲</string>
    <string name="thirdChoice">گزینه ۳</string>
    <string name="fourthChoice">گزینه ۴</string>
    <string name="next">بعدی</string>
    <string name="previous">قبلی</string>
    <string name="seeResults">مشاهده جواب‌ها</string>
    <string name="saveTestTitle">مایل به ذخیره آزمون برای آینده هستید؟</string>
    <string name="saveTest">ذخیره آزمون</string>
    <string name="exitTest">خروج از آزمون</string>
    <string name="resultTitle">نتایج</string>
    <string name="resultDesc">نتیجه آزمون شما : </string>

    <!--Permission Dialog-->
    <string name="permissionDeniedTitle">عدم دسترسی</string>
    <string name="permissionAction">باشه</string>
    <string name="permissionDeniedSubTitle">متاسفانه به دلیل عدم تایید دسترسی، آزمون باز قادر به انجام درخواست شما نیست؛ در صورت تمایل دسترسی‌ را دوباره تنظیم کنید.</string>

    <!--Test Activity-->
    <string name="hasNegativePoint">نمره منفی دارد</string>
    <string name="startTest">شروع آزمون</string>

    <!--Favorites Fragment-->
    <string name="noItemFavorites">شما هنوز آزمونی را به لیست اضافه نکرده‌اید.</string>

    <!--History Fragment-->
    <string name="noItemHistory">شما هنوز آزمونی نداده‌اید.</string>
    <string name="answer">پاسخنامه</string>

    <!--FavoredQuestion Fragment-->
    <string name="noItemFavored">شما هنوز سوالی را اضافه نکرده‌اید.</string>

    <!--SavedTest Fragment-->
    <string name="noItemSavedTest">شما آزمونی را ذخیره نکرده اید.</string>

    <!--Menu-->
    <string name="shareTestMenu">اشتراک گذاری آزمون</string>
    <string name="addToFavoritesMenu">افزودن به آزمون‌های منتخب</string>
    <string name="showAnswers">نمایش پاسخ ها</string>
    <string name="addToFavoredQuestionMenu">افزودن به سوالات منتخب</string>
    <string name="finishTest">اتمام آزمون</string>

    <!--Delete Dialog-->
    <string name="titleDelete">مطمئن به حذف هستید؟</string>

    <!--Saved Tests-->
    <string name="deleteSavedTest">حذف آزمون</string>
    <string name="resumeTest">ادامه آزمون</string>

    <!--Dialog Resume-->
    <string name="resumeTestTitle">این آزمون قبلا ذخیره شده.\nمایل به شروع مجدد هستید؟</string>

    <string name="unzipFailure">متاسفانه فایل‌های مربوط به نرم‌افزار بصورت کامل بارگذاری نگردیده ، لطفا مجدد تلاش نمایید.</string>
    <string name="tryAgain">تلاش مجدد</string>

</resources>
