<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:background="@drawable/bg_radius_white"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:padding="16dp">

    <com.kokabi.p.azmonbaz.Components.CTextViewSansMedium
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal|end"
        android:paddingTop="0dp"
        android:text="@string/permissionDeniedTitle"
        android:textColor="@color/darkGray"
        android:textSize="18sp" />

    <com.kokabi.p.azmonbaz.Components.CTextViewSans
        android:id="@+id/sub_title_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_tv"
        android:layout_gravity="center_horizontal|end"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:paddingTop="0dp"
        android:text="@string/permissionDeniedSubTitle"
        android:textColor="@color/mediumGray"
        android:textSize="14sp" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonHeight"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sub_title_tv"
        app:mrl_rippleColor="@color/mediumGray"
        app:mrl_rippleRoundedCorners="2dp">

        <com.kokabi.p.azmonbaz.Components.CButton
            android:id="@+id/ok_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/permissionAction"
            android:textColor="@color/primaryColor"
            android:textSize="15sp" />

    </com.balysv.materialripple.MaterialRippleLayout>

</RelativeLayout>