<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--ToolBar-->
        <include
            android:id="@+id/toolBarInclude"
            layout="@layout/toolbar_course_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <com.rey.material.widget.ProgressView
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@+id/toolBarInclude"
            app:pv_autostart="true"
            app:pv_circular="false"
            app:pv_progressMode="determinate"
            app:pv_progressStyle="@style/LinearProgress" />

        <LinearLayout
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/progressBar"
            android:orientation="vertical"
            android:weightSum="2">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/question_imgv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:scaleType="centerCrop" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/full_imgbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:background="@color/transparent"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_full_screen" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/primaryColor" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:id="@+id/nextQuestion_ly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/nextQuestion_imgv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:padding="16dp"
                            app:srcCompat="@drawable/ic_next" />

                        <com.kokabi.p.azmonbaz.Components.CTextViewSans
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="16dp"
                            android:paddingStart="16dp"
                            android:text="@string/next"
                            android:textColor="@color/darkGray" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/nextQuestion_ly"
                        android:layout_toStartOf="@+id/previousQuestion_ly"
                        android:gravity="center">

                        <android.support.v7.widget.AppCompatImageButton
                            android:id="@+id/addToFavoredQuestion_imgbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:padding="16dp"
                            app:srcCompat="@drawable/ic_bookmark_outline" />

                        <android.support.v7.widget.AppCompatImageButton
                            android:id="@+id/minus_imgbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:padding="16dp"
                            app:srcCompat="@drawable/ic_minus" />

                        <android.support.v7.widget.AppCompatImageButton
                            android:id="@+id/cross_imgbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:padding="16dp"
                            app:srcCompat="@drawable/ic_clear" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/previousQuestion_ly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/previousQuestion_imgv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:padding="16dp"
                            app:srcCompat="@drawable/ic_previous" />

                        <com.kokabi.p.azmonbaz.Components.CTextViewSans
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="16dp"
                            android:paddingStart="16dp"
                            android:text="@string/previous"
                            android:textColor="@color/darkGray" />

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.kokabi.p.azmonbaz.Components.CButton
                        android:id="@+id/secondChoice_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/selector_btn"
                        android:text="@string/secondChoice"
                        android:textColor="@color/darkPrimaryColor"
                        android:textSize="16sp" />

                    <com.kokabi.p.azmonbaz.Components.CButton
                        android:id="@+id/firstChoice_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/selector_btn"
                        android:text="@string/firstChoice"
                        android:textColor="@color/darkPrimaryColor"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.kokabi.p.azmonbaz.Components.CButton
                        android:id="@+id/fourthChoice_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/selector_btn"
                        android:text="@string/fourthChoice"
                        android:textColor="@color/darkPrimaryColor"
                        android:textSize="16sp" />

                    <com.kokabi.p.azmonbaz.Components.CButton
                        android:id="@+id/thirdChoice_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/selector_btn"
                        android:text="@string/thirdChoice"
                        android:textColor="@color/darkPrimaryColor"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/pauseLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/toolBarInclude"
            android:visibility="gone" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/confirm_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_confirm" />

</android.support.design.widget.CoordinatorLayout>