<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/mainContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="visible">

                <com.kokabi.p.azmonbaz.Components.CTextViewSansMedium
                    android:id="@+id/testTitle_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|right"
                    android:padding="2dp"
                    android:singleLine="true"
                    android:textColor="@color/darkGray"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/testTime_rly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/testTitle_tv">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/testTimeElapsed_imgv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:tint="@color/accentColor"
                        app:srcCompat="@drawable/ic_time_lapse" />

                    <com.kokabi.p.azmonbaz.Components.CTextViewSansMedium
                        android:id="@+id/testTimeElapsed_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/testTimeElapsed_imgv"
                        android:gravity="center_vertical|right"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textColor="@color/accentColor"
                        android:textSize="16sp" />

                    <com.kokabi.p.azmonbaz.Components.CTextViewSansMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/testTimeElapsed_tv"
                        android:gravity="center_vertical|right"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:text="@string/minute"
                        android:textColor="@color/accentColor"
                        android:textSize="16sp" />

                </RelativeLayout>

            </RelativeLayout>

            <com.kokabi.p.azmonbaz.Components.CTextViewSans
                android:id="@+id/negativePoint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="8dp"
                android:background="@drawable/negative_point"
                android:clickable="false"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp"
                android:text="@string/hasNegativePoint"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/mediumGray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/resumeTest_ripple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:mrl_rippleColor="@color/mediumGray">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/resumeTest_imgbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:contentDescription="@string/resumeTest"
                    android:padding="8dp"
                    android:tint="@color/darkGray"
                    app:srcCompat="@drawable/dr_saved_test" />

            </com.balysv.materialripple.MaterialRippleLayout>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/resumeTest_ripple"
                android:layout_toStartOf="@+id/deleteSaved_ripple" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/deleteSaved_ripple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:mrl_rippleColor="@color/mediumGray">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/deleteSaved_imgbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:contentDescription="@string/deletSavedtest"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_delete" />

            </com.balysv.materialripple.MaterialRippleLayout>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>